--- a/stylo1.css
+++ b/stylo1.css
@@ -45,12 +45,10 @@
 
 .navigation__list__button:hover {
     text-shadow: 0px 0px 25px gray;
-}
-
-li:hover {
+    cursor: pointer;
     will-change: transform;
-    transform: translateX(40px) scale(1.3);
-    transition: 0.5s;
+    transform: translateX(30px) scale(1.3);
+    transition: 1s;
 }
 
 .navigation__list__button--first {
@@ -67,8 +65,11 @@ li:hover {
 }
 
 .navigation__list__button--first:hover {
+    cursor: pointer;
     color: black;
-    transition: 1.5s;
+    transition: 1s;
+    will-change: transform;
+    transform: translateX(30px) scale(1.3);
 }
 
 .navigation__list {
