--- a/stylo1.css
+++ b/stylo1.css
@@ -52,6 +52,7 @@ body {
     will-change: transform;
     transform: translateX(30px) scale(1.3);
     transition: 0.5s;
+    background-size: cover;
 }
 
 .navigation__button--first {
@@ -73,6 +74,7 @@ body {
     transition: 0.5s;
     will-change: transform;
     transform: translateX(30px) scale(1.3);
+    background-size: cover;
 }
 
 .navigation__list {
